# python-project-lvl1

./: .pyproject.tonl.swp  .travis.yml  .travis.yml.save  Makefile  Makefile.save  Makefile.save.1  Makefile.save.2  Makefile.save.3  README.md  README.md.save  pyproject.toml  setup.cfg  setup.cfg.save
brain_games/: __init__.py  cli.py  cli.py.save  engine.py  games.py
brain_games/games/: __init__.py  calc.py  even.py  even.py.save  gcd.py  gcd.py.save  gcd.py.save.1  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_games.py.save  brain_gcd.py  brain_prime.py  brain_progression.py
