[tool.poetry]
name = "workmixail_brain_games"
version = "0.9.1"
description = "Brain Games - first project of Python programming course by Hexlet"
authors = ["Mikhail D <workmixail@gmail.com>"]
packages = [   { include = "brain_games" }, ]
repository = https://github.com/workmikhail/python-project-lvl1

[tool.poetry.dependencies]
python = "^3.6.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
